# dsnd-data-science-blog-post

./: LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
blog_post/: cracking_the_code_to_developer_satisfaction.md
notebooks/: 01_data_understanding.ipynb  02_main.ipynb  02_story.ipynb
